--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
+<head>
+	<title>FakeFake's Repo</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="/CydiaIcon.png">
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/index.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+</head>
 <body>
-
-<h1>Hello World</h1>
-
-<p>This is a cydia repo</p>
-
+	<div class="container">
+		<div class="page-header">
+			<img src="/CydiaIcon.png" alt="Repo Icon" height="40" width="40" class="repo-icon">
+			<h1>FakeFake's Repo</h1>
+		</div>
+		<div class="row">
+			<div class="col-md-8">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						 You can add my repo to Cydia using this <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://fakefakedev.github.io/repo">link</a>!
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
-
-</html> 
+</html>
