--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>FakeFake's Repo</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="/repo/CydiaIcon.png">
+	<link rel="icon" href="/CydiaIcon.png">
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/index.css">
@@ -13,7 +13,7 @@
 <body>
 	<div class="container">
 		<div class="page-header">
-			<img src="/repo/CydiaIcon.png" alt="Repo Icon" height="40" width="40" class="repo-icon">
+			<img src="/CydiaIcon.png" alt="Repo Icon" height="40" width="40" class="repo-icon">
 			<h1>FakeFake's Repo</h1>
 		</div>
 		<div class="row">
