--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
 	<div class="container">
 		<div class="page-header">
-			<img src="https://raw.githubusercontent.com/FakeFakeDev/repo/master/CydiaIcon.png" alt="Repo Icon" height="40" width="40" class="repo-icon">
+			<img src="https://raw.githubusercontent.com/FakeFakeDev/repo/master/CydiaIcon.png" alt="Repo Icon" height="80" width="80" class="repo-icon">
 			<h1>FakeFake's Repo</h1>
 		</div>
 		<div class="row">
 			<div class="col-md-8">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						 You can add my repo to Cydia using this <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://fakefakedev.github.io/repo">link</a>!
+						 Click <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://fakefakedev.github.io/repo">here</a> to add my repo to Cydia!
 					</div>
 				</div>
 			</div>
