--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
 	<title>FakeFake's Repo</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,11 +9,11 @@
 	<link rel="stylesheet" href="/css/index.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
-<body>
+<body style="background-color:#353535">
 	<div class="container">
 		<div class="page-header">
 			<img src="https://raw.githubusercontent.com/FakeFakeDev/repo/master/CydiaIcon.png" alt="Repo Icon" height="80" width="80" class="repo-icon">
-			<h1>FakeFake's Repo</h1>
+			<h1 style="color:white;">FakeFake's Repo</h1>
 		</div>
 		<div class="row">
 			<div class="col-md-8">
@@ -26,5 +25,8 @@
 			</div>
 		</div>
 	</div>
-</body>
-</html>
+
+
+  
+    
+ </body></html>
