--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body style="background-color:#353535">
 	<div class="container">
 		<div class="page-header">
+		<a href="https://github.com/FakeFakeDev"><img src="repo/CydiaIcon.png" alt="Cydia Icon" onmouseover="this.src='repo/CydiaIconGlow.png';" onmouseout="this.src='repo/CydiaIcon.png';"/></a>
 			<img src="https://raw.githubusercontent.com/FakeFakeDev/repo/master/CydiaIcon.png" alt="Repo Icon" height="80" width="80" class="repo-icon">
 			<h1 style="color:white;">FakeFake's Repo</h1>
 		</div>
