--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="col-md-8">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						 Click <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://fakefakedev.github.io/repo">here</a> to add my repo to Cydia!
+						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://fakefakedev.github.io/repo">Click here to add my repo to Cydia!</a> 
 					</div>
 				</div>
 			</div>
