--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://fakefakedev.github.io/repo">Click here to add my repo to Cydia!</a> 
+                        <div>
+  <div>Bitcoin donations are greatly appreciated!: </div>
+  <div>bc1q6a5hxrqp0ww87jtrc50fqqy9df9cgn5dw6uxru</div>
+</div>
 					</div>
 				</div>
 			</div>
